k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studentapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studentapi
  template:
    metadata:
      labels:
        app: studentapi
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: studentapi
        image: ghcr.io/sauwebprogramming/sistemyon2026app-abdullah-garibov-api:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: studentapi
spec:
  selector:
    app: studentapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
