k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studentweb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studentweb
  template:
    metadata:
      labels:
        app: studentweb
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: studentweb
        image: ghcr.io/sauwebprogramming/sistemyon2026app-abdullah-garibov-web:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: studentweb-service
spec:
  type: NodePort
  selector:
    app: studentweb
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
      nodePort: 30081
